[gd_scene load_steps=9 format=2]

[ext_resource path="res://Hud/CharacterSelector/ChangeCharacterSelector_1.png" type="Texture" id=1]
[ext_resource path="res://Hud/CharacterSelector/ChangeCharacterSelector_2.png" type="Texture" id=2]
[ext_resource path="res://Hud/CharacterSelector/ChangeCharacterSelector_3.png" type="Texture" id=3]
[ext_resource path="res://Player/CharacterSelector.gd" type="Script" id=4]
[ext_resource path="res://Assets/Sprites/Playeable/Fawu.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Playeable/Yiblin.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 5 )
region = Rect2( 12, 1, 42, 62 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 6 )
region = Rect2( 2, 0, 60, 64 )

[node name="CharacterSelector" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="Container" type="Node2D" parent="."]

[node name="Up" type="TextureButton" parent="Container"]
self_modulate = Color( 0.913725, 0.486275, 0.027451, 1 )
margin_right = 192.0
margin_bottom = 192.0
focus_neighbour_left = NodePath("../Left")
focus_neighbour_right = NodePath("../Right")
button_mask = 0
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" type="Sprite" parent="Container/Up"]

[node name="Left" type="TextureButton" parent="Container"]
self_modulate = Color( 0.117647, 0.537255, 0.694118, 1 )
margin_right = 192.0
margin_bottom = 192.0
focus_neighbour_top = NodePath("../Up")
focus_neighbour_right = NodePath("../Right")
button_mask = 0
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fawu" type="Sprite" parent="Container/Left"]
position = Vector2( 57.9084, 114.035 )
texture = SubResource( 1 )

[node name="Right" type="TextureButton" parent="Container"]
self_modulate = Color( 0.72549, 0.0235294, 0.0235294, 1 )
margin_right = 192.0
margin_bottom = 192.0
focus_neighbour_left = NodePath("../Left")
focus_neighbour_top = NodePath("../Up")
button_mask = 0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Yiblin" type="Sprite" parent="Container/Right"]
position = Vector2( 133.349, 120.614 )
texture = SubResource( 2 )

[connection signal="focus_entered" from="Container/Up" to="." method="_on_Up_focus_entered"]
[connection signal="focus_exited" from="Container/Up" to="." method="_on_Up_focus_exited"]
[connection signal="focus_entered" from="Container/Left" to="." method="_on_Left_focus_entered"]
[connection signal="focus_exited" from="Container/Left" to="." method="_on_Left_focus_exited"]
[connection signal="focus_entered" from="Container/Right" to="." method="_on_Right_focus_entered"]
[connection signal="focus_exited" from="Container/Right" to="." method="_on_Right_focus_exited"]
